# azure-runcommands-on-vm-vmss-with-python-sdk

./: README.md  az_vm_runcommands.py  az_vmss_runcommands.py  pyproject.toml  resource_graph_query.py
